// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches the snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        href="/latest"
      >
        <h2
          class="latest-head"
        >
          The Latest
        </h2>
      </a>
      <div
        class="articles-sidebar"
      />
    </div>
  </body>,
  "container": <div>
    <a
      href="/latest"
    >
      <h2
        class="latest-head"
      >
        The Latest
      </h2>
    </a>
    <div
      class="articles-sidebar"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`matches the snapshot 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        href="/latest"
      >
        <h2
          class="latest-head"
        >
          The Latest
        </h2>
      </a>
      <div
        class="articles-sidebar"
      >
        <p>
          <a
            href="https://pubmed.ncbi.nlm.nih.gov/2345"
            rel="noopener noreferrer"
            target="_blank"
          >
            a test article
          </a>
        </p>
        <p>
          <a
            href="https://pubmed.ncbi.nlm.nih.gov/5732"
            rel="noopener noreferrer"
            target="_blank"
          >
            a second test article
          </a>
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <a
      href="/latest"
    >
      <h2
        class="latest-head"
      >
        The Latest
      </h2>
    </a>
    <div
      class="articles-sidebar"
    >
      <p>
        <a
          href="https://pubmed.ncbi.nlm.nih.gov/2345"
          rel="noopener noreferrer"
          target="_blank"
        >
          a test article
        </a>
      </p>
      <p>
        <a
          href="https://pubmed.ncbi.nlm.nih.gov/5732"
          rel="noopener noreferrer"
          target="_blank"
        >
          a second test article
        </a>
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`matches the snapshot 3`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        href="/latest"
      >
        <h2
          class="latest-head"
        >
          The Latest
        </h2>
      </a>
      <div
        class="articles-sidebar"
      >
        <p>
          <a
            href="https://pubmed.ncbi.nlm.nih.gov/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            No articles found
          </a>
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <a
      href="/latest"
    >
      <h2
        class="latest-head"
      >
        The Latest
      </h2>
    </a>
    <div
      class="articles-sidebar"
    >
      <p>
        <a
          href="https://pubmed.ncbi.nlm.nih.gov/1"
          rel="noopener noreferrer"
          target="_blank"
        >
          No articles found
        </a>
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`matches the snapshot 4`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        href="/latest"
      >
        <h2
          class="latest-head"
        >
          The Latest
        </h2>
      </a>
      <div
        class="articles-sidebar"
      >
        <p>
          <a
            href="https://pubmed.ncbi.nlm.nih.gov/2345"
            rel="noopener noreferrer"
            target="_blank"
          >
            a test article
          </a>
        </p>
        <p>
          <a
            href="https://pubmed.ncbi.nlm.nih.gov/5732"
            rel="noopener noreferrer"
            target="_blank"
          >
            a second test article
          </a>
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <a
      href="/latest"
    >
      <h2
        class="latest-head"
      >
        The Latest
      </h2>
    </a>
    <div
      class="articles-sidebar"
    >
      <p>
        <a
          href="https://pubmed.ncbi.nlm.nih.gov/2345"
          rel="noopener noreferrer"
          target="_blank"
        >
          a test article
        </a>
      </p>
      <p>
        <a
          href="https://pubmed.ncbi.nlm.nih.gov/5732"
          rel="noopener noreferrer"
          target="_blank"
        >
          a second test article
        </a>
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
